# pathfinding

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  GRAPH_GUIDE.md  README.md  appveyor.yml  deny.toml  flake.nix  release.sh  release.toml
.github/: bors.toml  copilot-instructions.md  dependabot.yml  renovate.json
.github/workflows/: codspeed.yml  iai-callgrind.yml  pre-commit.yaml  tests.yml
benches/: algos-fill.rs  algos.rs  bfs.rs  dijkstra-perf.rs  edmondskarp.rs  iai_algos.rs  iai_edmondskarp.rs  iai_kuhn_munkres.rs  iai_separate_components.rs  kuhn_munkres.rs  kuhn_munkres_vs_bertsekas.rs  matrices.rs  movingai.rs  separate_components.rs
examples/: assignment.rs  bfs_bidirectional.rs  graph-adjacency-list.rs  graph-adjacency-matrix.rs  graph-struct.rs  graph-unweighted-bfs.rs  kuhn_munkres_complexity.rs  sliding-puzzle.rs
src/: astar.rs  bertsekas.rs  bfs.rs  connected_components.rs  cycle_detection.rs  dfs.rs  dijkstra.rs  edmonds_karp.rs  edmondskarp.rs  fringe.rs  grid.rs  idastar.rs  kuhn_munkres.rs  lib.rs  matrix.rs  noderefs.rs  square_matrix.rs  topological_sort.rs  utils.rs
src/directed/: astar.rs  bfs.rs  count_paths.rs  cycle_detection.rs  dfs.rs  dijkstra.rs  edmonds_karp.rs  fringe.rs  idastar.rs  iddfs.rs  mod.rs  strongly_connected_components.rs  topological_sort.rs  yen.rs
src/undirected/: cliques.rs  connected_components.rs  kruskal.rs  mod.rs  prim.rs
tests/: A-small-practice.in  A-small-practice.out  aoc-2017-12-12.rs  aoc-2017-12-12.txt  aoc-2020-10.rs  aoc-2020-10.txt  aoc-2021-12.rs  aoc-2021-12.txt  aoc-2023-17.rs  astar_bag.rs  check-msrv-consistency.sh  cliques.rs  codejam-2017-a.rs  connected-components.rs  count_paths.rs  cycle_detection.rs  dfs-reach.rs  dijkstra-all.rs  dijkstra-reach.rs  edmondskarp.rs  gps.rs  graph_guide_examples.rs  grid.rs  kruskal.rs  kuhn_munkres.rs  matrix.rs  pathfinding.rs  prim.rs  r299.data  r299.rs  square_matrix.rs  strongly_connected_components.rs  test_bfs_multiple_starts.rs  topological_sort.rs  ui.rs  utils.rs  version.rs  yen-issue-507.rs  yen.rs
tests/ui/: matrix.rs  matrix.stderr
