[package]
name = "pathfinding"
description = "Pathfinding, flow, and graph algorithms"
repository = "https://github.com/evenfurther/pathfinding"
keywords = ["shortest-path", "astar", "dijkstra", "flow", "graph"]
license = "Apache-2.0/MIT"
homepage = "https://rfc1149.net/devel/pathfinding.html"
documentation = "https://docs.rs/pathfinding/"
version = "4.14.0"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
categories = ["algorithms"]
readme = "README.md"
edition = "2021"
rust-version = "1.77.2"

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-replacements = [
    {file = "README.md", search = "pathfinding = \".*\"", replace = "pathfinding = \"{{version}}\"", exactly = 1},
    {file = "CHANGELOG.md", search = "n\\.n\\.n", replace = "{{tag_name}}", exactly = 1}
]

[dependencies]
num-traits = "0.2.19"
indexmap = "2.5.0"
rustc-hash = "2.0.0"
integer-sqrt = "0.1.5"
thiserror = "2.0.0"
deprecate-until = "0.1.1"

[dev-dependencies]
codspeed-criterion-compat = "2.7.2"
itertools = "0.14.0"
lazy_static = "1.5.0"
movingai = "1.3.1"
noisy_float = "0.2.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"
# Not a real dependency, but needed since criterion 0.4.0
# does not compile anymore as of 2022-10-03. This is still
# needed on 2024-11-24.
regex = "1.10.6"
trybuild = "1.0.99"
version_check = "0.9.5"

[lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
too_long_first_doc_paragraph = { level = "allow", priority = 1 } # Temporary
pedantic = { level = "deny", priority = 0 }

[[bench]]
name = "algos"
harness = false

[[bench]]
name = "algos-fill"
harness = false

[[bench]]
name = "movingai"
harness = false

[[bench]]
name = "edmondskarp"
harness = false

[[bench]]
name = "kuhn_munkres"
harness = false

[[bench]]
name = "separate_components"
harness = false

[[bench]]
name = "matrices"
harness = false
