[package]
name = "pathfinding"
description = "Pathfinding, flow, and graph algorithms"
repository = "https://github.com/evenfurther/pathfinding"
keywords = ["shortest-path", "astar", "dijkstra", "flow", "graph"]
license = "Apache-2.0/MIT"
homepage = "https://rfc1149.net/devel/pathfinding.html"
documentation = "https://docs.rs/pathfinding/"
version = "4.14.0"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
categories = ["algorithms"]
readme = "README.md"
edition = "2021"
rust-version = "1.81.0"

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-replacements = [
    {file = "README.md", search = "pathfinding = \".*\"", replace = "pathfinding = \"{{version}}\"", exactly = 1},
    {file = "CHANGELOG.md", search = "n\\.n\\.n", replace = "{{tag_name}}", exactly = 1}
]

[dependencies]
num-traits = "0.2.19"
indexmap = "2.7.1"
rustc-hash = "2.1.1"
integer-sqrt = "0.1.5"
thiserror = "2.0.11"
deprecate-until = "0.1.1"

[dev-dependencies]
codspeed-criterion-compat = "2.8.0"
itertools = "0.14.0"
movingai = "1.3.1"
noisy_float = "0.2.0"
rand = "0.9.0"
rand_xorshift = "0.4.0"
# Not a real dependency, but needed since criterion 0.4.0
# does not compile anymore as of 2022-10-03. This is still
# needed on 2024-11-24.
regex = "1.11.1"
trybuild = "1.0.103"
version_check = "0.9.5"

[lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
too_long_first_doc_paragraph = { level = "allow", priority = 1 } # Temporary
pedantic = "deny"
# Do not activate until Clippy issue #13356 is fixed
#allow_attributes = "deny"

[[bench]]
name = "algos"
harness = false

[[bench]]
name = "algos-fill"
harness = false

[[bench]]
name = "movingai"
harness = false

[[bench]]
name = "edmondskarp"
harness = false

[[bench]]
name = "kuhn_munkres"
harness = false

[[bench]]
name = "separate_components"
harness = false

[[bench]]
name = "matrices"
harness = false
